2007-08-01  Ben Motmans <ben.motmans@gmail.com>

	* Providers/AbstractSchemaProvider.cs, Providers/ISchemaProvider.cs: IsValidName method
	* Configuration/DatabaseConnectionContextCollection.cs: Contains method that can
	look for a specific name
	* Configuration/DatabaseConnectionContext.cs: Refresh event

	* Schema/ViewSchema.cs, Schema/TableSchema.cs: update column parent after clone
	* Schema/ColumnSchema.cs, Schema/DataTypeSchema.cs: store length, scale and precision
	information in the datatype and not in the column
	* Providers/AbstractSchemaProvider.cs, Providers/ISchemaProvider.cs: added methods
	to get the create or alter statements from some schema objects
	* Dialect/AbstractSqlDialect.cs: fixed incorrectly generated sql statements
	* ConnectionPool/IPooledDbConnection.cs, ConnectionPool/AbstractPooledDbConnection.cs:
	Added helper methods to quickly execute sql statements
	* ConnectionContextService.cs: automatically initialize

2007-07-31  Ben Motmans <ben.motmans@gmail.com>

	* QueryService.cs: Added a global method to raise database exceptions
	* Providers/IGuiProvider.cs, IDbFactory.cs: Moved all Gui operations
	in a separate Gui provider
	* Providers/ISchemaProvider.cs, Providers/AbstractSchemaProvider.cs: 
	Methods to create new schema objects
	* MetaData/*.cs: Added more metadata flags
	* Collections/*.cs: Added a copy constructor
	* Schema/*.cs: Added a copy constructor and implemented IClonable 

2007-07-25  Ben Motmans <ben.motmans@gmail.com>

	* Schema/TableSchema.cs: added additional constructor that initializes all properties
	* Schema/ParameterSchema.cs, Schema/ParameterType.cs: Added a property to
	define the parameter direction (in, out, inout)
	* Schema/IndexSortType.cs, Schema/IndexSchema.cs: Indices no longer subclass
	constraints but are a type on its own
	* Schema/DataTypeSchema.cs: added properties for the create format, auto inc,
	isNullable and isFixedLength