@@ -138,6 +138,7 @@
     <File name="./Collections/SortedCollectionItemEventArgs.cs" subtype="Code" buildaction="Compile" />
     <File name="./MetaData/DatabaseMetaData.cs" subtype="Code" buildaction="Compile" />
     <File name="./Providers/IGuiProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Schema/TriggerFireType.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
